--- a/src/Jili/EmarBundle/Resources/views/Product/retrieve_page.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Product/retrieve_page.html.twig
@@ -36,7 +36,7 @@
           </dd>
         </li>
 {% else %}
-<em>Sorry, Nothing on the shelf !</em>
+<em>很抱歉，没有找到相关的商品。</em>
 {% endfor %}
 {#
         <li>
