--- a/src/Jili/EmarBundle/Resources/views/Product/search_pagination.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Product/search_pagination.html.twig
@@ -23,6 +23,9 @@
 {#            <p class="rebate">返利最高：<em>10%</em></p> #}
           </dd>
         </li>
+
+{% else %}
+<em>很抱歉，没有找到相关的商品。</em>
 {% endfor %}
 
 
