--- a/src/Jili/EmarBundle/Resources/views/Top/index.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Top/index.html.twig
@@ -159,7 +159,7 @@
     </div><!-- eof indexRecommend -->
 
     <div id="marketActivity">
-        {{ render(controller('JiliEmarBundle:Hotactivity:hot', {'max': 3, 'tmpl': 'top' } ))}}
+        {# render(controller('JiliEmarBundle:Hotactivity:hot', {'max': 3, 'tmpl': 'top' } )) #}
     </div><!-- eof marketActivity -->
   </div><!-- w615 side -->
  
