--- a/src/Jili/ApiBundle/Resources/views/User/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/info.html.twig
@@ -488,10 +488,12 @@ function addClass(id){
           <td>
             {% if item.adid %}<a href="{{ asset(path('_advertiserment_index',{'id':item.adid}),'cdn1') }}" target="_blank">{{ item.title }}</a>
               {% else%}
-                  {% if item.incentiveType == 16 %}
-                    {{ item.title }}
+                  {% if item.incentiveType == 17 %}
+                    <a href="{{ path('_advertiserment_list') }}" target="_blank">{{ item.title }}</a>
+                  {% elseif item.incentiveType == 18 %}
+                    <a href="{{ asset(path('_advertiserment_offer99')) }}" target="_blank">{{ item.title }}</a>
                   {% else %}
-                    <a href="{{ path('_game_index') }}" target="_blank">{{ item.title }}</a>
+                    {{ item.title }}
                   {% endif %}
               {% endif %}  
           </td>
