some files not be submitted

--- a/src/Jili/ApiBundle/Resources/views/MarketActivity/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/MarketActivity/index.html.twig
@@ -100,7 +100,15 @@ $(document).ready(function() {
    
         <!--<div class="loading"><img src="{{ asset('other/loading.gif') }}" width="48" height="48"></div>-->
     </div>
+	<div style="width: 160px; top: 30px; right: 0; position: absolute; height: 600px;">
+		<script type="text/javascript">
+		/*160*600，创建于2014-4-2*/
+		var cpro_id = "u1510122";
+		</script>
+		<script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+	</div>
 </div>
+
 {% include 'JiliApiBundle::footer.html.twig' %}
 </body>
 </html>
