--- a/src/Jili/ApiBundle/Resources/views/Advertiserment/list.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Advertiserment/list.html.twig
@@ -45,16 +45,16 @@
 
      {% for item in ads %}
             <div class="cpa{{ loop.last ? ' last' : '' }}">
-              <dd><a href="{{ path('_advertiserment_index',{'id':item.id}) }}"><img src="{{ asset(item.listImage) }}" width="100px" height="60px" alt="{{item.title}}"></a></dd>
+              <dd><a href="{{ path('_advertiserment_index',{'id':item.id}) }}"><img src="{{ asset(item.listImage) }}" width="200px" height="130px" alt="{{item.title}}"></a></dd>
 
                       {% if item.incentiveType==1 %}
-                         <dt>+{{ item.incentive }}<br />米粒<br/>
+                         <dt>+{{ item.incentive }}米粒<br/>
                         {% elseif item.incentiveType==2 %}
                          <dt>{{ item.incentiveRate/10000 }}%<br />最高获消费额<br/>
                          {% else %}
                      {% endif %}
-              <a class="joinBtn" href="{{ path('_advertiserment_index',{'id':item.id}) }}">马上参与</a></dt>
-              <a href="{{ path('_advertiserment_index',{'id':item.id}) }}" class="title">{{ item.title  }}</a>
+              <a class="joinBtn" href="{{ path('_advertiserment_index',{'id':item.id}) }}">马上参与</a>
+              <a href="{{ path('_advertiserment_index',{'id':item.id}) }}" class="title">{{ item.title  }}</a></dt>
             </div>
      {% endfor %}
         </div>
