--- a/web/css/cpsActivity.css
+++ b/web/css/cpsActivity.css
@@ -8,6 +8,7 @@
     z-index: 100;
 }
 .cpsActivity .classify{
+	width: 925px;
 	background-color: #FFFFFF;
     border: 3px solid #DDDDDD;
 	padding:15px 15px 10px 15px;
