--- a/src/Jili/ApiBundle/Resources/views/Top/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/index.html.twig
@@ -44,89 +44,7 @@
       <h3>我的任务列表</h3>
       <div class="menu"><a class="recommend hover">为您推荐的</a><a class="affirm">确认中</a><a class="finish">已完成</a></div>
       <div class="mask">
-        <div class="all clearfix">
-          <ul class="taskList clearfix">
-            <li><a href="#">
-              <dt>小鸡找米</dt>
-              <dd>最高<em>5888</em>米粒</dd>
-              </a></li>
-            <li class="brn"><a href="#">
-              <dt>广告任务墙</dt>
-              <dd><em>3/27</em>更新</dd>
-              </a></li>
-            <li><a href="#">
-              <dt>各校自主招生网络
-                </dd>
-              <dt><em>800</em>米粒
-                </dd>
-              </a></li>
-            <li class="brn"><a href="#">
-              <dt>去购物</dt>
-              </a></li>
-            <li class="bbn"><a href="#">
-              <dt>91问问快速问答</dt>
-              <dd><em>1</em>米粒</dd>
-              </a></li>
-            <li class="bbn brn"><a href="#">
-              <dt>每日签到</dt>
-              <dd><em>1</em>米粒</dd>
-              </a></li>
-          </ul>
-          <ul class="taskList clearfix">
-            <li><a href="#">
-              <dt>小鸡找米</dt>
-              <dd>最高<em>5888</em>米粒</dd>
-              </a></li>
-            <li class="brn"><a href="#">
-              <dt>广告任务墙</dt>
-              <dd><em>3/27</em>更新</dd>
-              </a></li>
-            <li><a href="#">
-              <dt>各校自主招生网络
-                </dd>
-              <dt><em>800</em>米粒
-                </dd>
-              </a></li>
-            <li class="brn"><a href="#">
-              <dt>去购物</dt>
-              </a></li>
-            <li class="bbn"><a href="#">
-              <dt>91问问快速问答</dt>
-              <dd><em>1</em>米粒</dd>
-              </a></li>
-            <li class="bbn brn"><a href="#">
-              <dt>每日签到</dt>
-              <dd><em>1</em>米粒</dd>
-              </a></li>
-          </ul>
-          <ul class="taskList clearfix">
-            <li><a href="#">
-              <dt>小鸡找米</dt>
-              <dd>最高<em>5888</em>米粒</dd>
-              </a></li>
-            <li class="brn"><a href="#">
-              <dt>广告任务墙</dt>
-              <dd><em>3/27</em>更新</dd>
-              </a></li>
-            <li><a href="#">
-              <dt>各校自主招生网络
-                </dd>
-              <dt><em>800</em>米粒
-                </dd>
-              </a></li>
-            <li class="brn"><a href="#">
-              <dt>去购物</dt>
-              </a></li>
-            <li class="bbn"><a href="#">
-              <dt>91问问快速问答</dt>
-              <dd><em>1</em>米粒</dd>
-              </a></li>
-            <li class="bbn brn"><a href="#">
-              <dt>每日签到</dt>
-              <dd><em>1</em>米粒</dd>
-              </a></li>
-          </ul>
-        </div><!-- eof all clearfix -->
+        {{ render(controller('JiliApiBundle:Top:myTask' ) ) }}
       </div><!-- eof .mask -->
     </div><!-- eof #task -->
     {% endif %}
