--- a/src/Jili/EmarBundle/Resources/views/base140307.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/base140307.html.twig
@@ -25,7 +25,20 @@
       {% block page_main %}{% endblock %}
 </div><!-- eof pageMain -->
 
+<script>
+var urls={
+		wenwenVisit:"{{ path('_default_wenwenVisit') }}",
+		advertiserment_click:"{{ path('_advertiserment_click') }}",
+		checkin_issetClick:"{{ path('_checkin_issetClick') }}",
+		checkin_clickInsert:"{{ path('_checkin_clickInsert') }}",
+		checkin_location:"{{ path('_checkin_location') }}",
+		checkin_clickCount:"{{ path('_checkin_clickCount') }}",
+		user_login:"{{ path('_user_login') }}"
+} ;
+</script>
 <script src="{{ asset('js140307/common.js') }}" language="javascript"></script>
+<script src="{{ asset('js140307/checkin.js') }}" language="javascript"></script>
+<script src="{{ asset('js/signIn.js')}}" type="text/javascript"></script>
 {% block javascript %}{% endblock %}
 
 </body>
