--- a/web/css140307/common.css
+++ b/web/css140307/common.css
@@ -48,3 +48,15 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 
 .main h1{ font-size:16px; line-height:40px;}
 .main h1 span{ font-size:12px; margin-left:10px;}
+
+.blackBg {
+    background-color: #000000;
+    display: none;
+    height: 100%;
+    left: 0;
+    opacity: 0.5;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 9998;
+}
