--- a/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
@@ -648,6 +648,12 @@
           <TD align=middle width=30><IMG height=9 
             src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
           <TD><A class=menuChild 
+            href="{{ path('admin_emarwebsitescroned') }}" 
+            target=main>同步列表</A></TD></TR>
+        <TR height=20>
+          <TD align=middle width=30><IMG height=9 
+            src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
+          <TD><A class=menuChild 
             href="{{ path('admin_emar_websites') }}" 
             target=main>列表/编辑</A></TD></TR>
         <TR height=20>
