--- a/src/Jili/EmarBundle/Resources/views/AdminEmarWebsitesCroned/index.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/AdminEmarWebsitesCroned/index.html.twig
@@ -36,7 +36,7 @@
                 <td>
                 <ul>
                     <li>
-                        <a href="{{ path('admin_emarwebsitescroned_import', { 'id': entity.id }) }}">配置</a>
+                        <a href="{{ path('admin_emarwebsitescroned_import', { 'id': entity.id }) }}">导入配置</a>
                     </li>
 {#
                     <li>
