--- a/web/css/exchange.css
+++ b/web/css/exchange.css
@@ -82,7 +82,6 @@
 .exchange h2 span{
 	color:#ff7114;
 	border-bottom:3px solid #ff7114;
-	padding:5px 0;
 }
 .exchange article{
 	background-color: #FFFFFF;
@@ -90,7 +89,7 @@
     float: right;
     margin: 20px 0 0;
     padding: 10px;
-    width: 710px;
+    width: 912px;
 	font-size:14px;
 	text-align:center;
 }
@@ -154,10 +153,10 @@
     padding-right: 20px;
     text-align: right;
     width: 120px;
+	clear:both;
 }
 .exchange article .wenwen div.form dt{
-	float:left;
-	width:460px;
+	width:500px;
 	margin: 10px 0;
 }
 .exchange article .wenwen div.form dt.notice{
