--- a/src/Jili/ApiBundle/Resources/views/Top/userInfo.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/userInfo.html.twig
@@ -4,7 +4,7 @@
       {% if user.iconPath %}
       <img src='{{ asset(user.iconPath) }}' height='90'/>
       {% else %}
-      <img width="90" height="90" src="{{ asset('other140307/image100.jpg') }}">
+      <img width="90" height="90" src="{{ asset('other140307/defaultFace.jpg') }}">
       {% endif %}
       </div>
     <p class="name">您好，{{ user.nick }}</p>
