--- a/src/Jili/ApiBundle/Resources/views/Top/checkIn.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/checkIn.html.twig
@@ -7,6 +7,17 @@
 <script src="{{ asset('js/signIn.js')}}" type="text/javascript"></script>
 {% endblock %}
 
+<script>
+var urls={
+		advertiserment_click:"{{ path('_advertiserment_click') }}",
+		checkin_issetClick:"{{ path('_checkin_issetClick') }}",
+		checkin_clickInsert:"{{ path('_checkin_clickInsert') }}",
+		checkin_location:"{{ path('_checkin_location') }}",
+		checkin_clickCount:"{{ path('_checkin_clickCount') }}",
+		user_login:"{{ path('_user_login') }}"
+} ;
+</script>
+
 <div class="blackBg"></div>
 <div id="signInFrame" style="display:none;">
   <h5>再打开<span id="remain">3</span>个商城就可以得到<span>{{ checkinPoint }}</span>个米粒</h5>
